--- a/public/screen.css
+++ b/public/screen.css
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=Ruslan+Display">
 html {
   height: 100%;
 }
@@ -6,4 +7,32 @@ body {
   margin: 0;
   min-height: 100%;
   font: 16px / 1 sans-serif;
+  font-family: "Ruslan Display", cursive;
+}
+header {
+  display: flex;
+  justify-content: center;
+  font-size: 72px;
+  background-color: lightblue;
+  font-family: "Ruslan Display", cursive;
+  letter-spacing: 0.5rem;
+}
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 5em;
+  font-size: 24px;
+  font-family: "Ruslan Display", cursive;
+}
+.player1 {
+  border: 1px solid black;
+  font-family: "Ruslan Display", cursive;
+}
+.player2 {
+  border: 1px solid black;
+  font-family: "Ruslan Display", cursive;
+}
+footer {
+  font-size: 78px;
 }
